<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ModityOutputOneActivity">
    <include layout="@layout/tool_bar"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_name"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:padding="10dp"
        android:textColor="@color/colorFirst"/>
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="12sp"
        android:background="@null"
        android:textColor="@color/colorSecond"
        android:hint="@string/input_input_name"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="10dp"
        android:background="@color/colorForth"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_head"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:padding="10dp"
        android:textColor="@color/colorFirst"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right|center_vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/head"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginRight="10dp"
            android:src="@mipmap/icon_relay_default"
            app:civ_border_color="@color/colorForth"
            app:civ_border_width="1dp"/>
        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@mipmap/icon_arrow"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorForth"/>
</LinearLayout>