<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:padding="5dp"
    android:layout_marginBottom="10dp"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="48dp"
        android:layout_height="48dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/output_head"
            android:layout_width="48dp"
            android:layout_height="48dp"
            tools:src="@mipmap/icon_device_default"/>
        <ImageView
            android:id="@+id/output_state"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/icon_state_off"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/output_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="@color/colorFirst"
            tools:text="名称" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="right|center_vertical"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/layout_onoff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:orientation="horizontal">
            <Button
                android:id="@+id/relay_on"
                android:layout_width="64dp"
                android:layout_height="28dp"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:layout_marginRight="5dp"
                android:background="@drawable/selector_btn_on"
                android:text="@string/on"/>
            <Button
                android:id="@+id/relay_off"
                android:layout_width="64dp"
                android:layout_height="28dp"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:layout_marginRight="5dp"
                android:background="@drawable/selector_btn_off"
                android:text="@string/off"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_pulse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal">
            <Button
                android:id="@+id/relay_pulse"
                android:layout_width="64dp"
                android:layout_height="28dp"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:layout_marginRight="5dp"
                android:background="@drawable/selector_btn_pulse"
                android:text="@string/pulse"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal">
            <Button
                android:id="@+id/relay_turn"
                android:layout_width="64dp"
                android:layout_height="28dp"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:layout_marginRight="5dp"
                android:background="@drawable/selector_btn_turn"
                android:text="@string/turn"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal">
            <Button
                android:id="@+id/relay_lock_on"
                android:layout_width="64dp"
                android:layout_height="28dp"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:layout_marginRight="5dp"
                android:background="@drawable/selector_btn_lock"
                android:text="@string/lock"/>
            <Button
                android:id="@+id/relay_lock_off"
                android:layout_width="64dp"
                android:layout_height="28dp"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                android:layout_marginRight="5dp"
                android:background="@drawable/selector_btn_off"
                android:text="@string/off"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>