<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SetListActivity">
    <include layout="@layout/tool_bar"/>

    <LinearLayout
        android:id="@+id/set_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/icon_name"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:text="@string/btn_set_device_info"/>
        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@mipmap/icon_arrow"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/set_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/icon_output"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:text="@string/btn_set_output_info"/>
        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@mipmap/icon_arrow"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/set_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/icon_input"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:text="@string/btn_set_input_info"/>
        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@mipmap/icon_arrow"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/set_del"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/icon_del"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:textColor="#f00"
            android:textSize="12sp"
            android:text="@string/btn_delete"/>
        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:src="@mipmap/icon_arrow"/>
    </LinearLayout>
</LinearLayout>